test/fail/varargs-multipart-multiple.grace
method first(first) second(*second, *third) {}
